--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
   },
   "dependencies": {
     "@ionic/react": "^8.3.3",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
+    "clsx": "^2.1.1",
     "flowbite": "^2.5.2",
+    "framer-motion": "^11.11.9",
     "mongoose": "^8.7.1",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "simplex-noise": "^4.0.3",
     "socket.io": "^4.8.0",
-    "socket.io-client": "^4.8.0"
+    "socket.io-client": "^4.8.0",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
